1.添加guava缓存 2.代码优化